# internship-project-tracker

./: README.md  pyproject.toml
intern_tracker/: cli.py  dashboard.py  energy.py  logs.py  projects.py  session.py  standup.py  store.py  tasks.py
